tests/transpiler/x/zig/while_loop.zig
// Generated by Mochi Zig transpiler on 2025-07-20 05:57 +0000
const std = @import("std");

pub fn main() void {
    var i: i64 = 0;
    while (i < 3) {
        std.debug.print("{any}\n", .{i});
        i = i + 1;
    }
}
